# StanfordPCL

./: .gitignore  CMakeLists.txt  PCLConfig.cmake.in  README.md  README.txt
gpu/kinfu_large_scale/: CMakeLists.txt
gpu/kinfu_large_scale/include/pcl/gpu/kinfu_large_scale/: color_volume.h  cyclical_buffer.h  kinfu.h  marching_cubes.h  pixel_rgb.h  point_intensity.h  raycaster.h  raycaster_large_scale.h  screenshot_manager.h  standalone_marching_cubes.h  tsdf_buffer.h  tsdf_volume.h  world_model.h
gpu/kinfu_large_scale/src/: HashSparseMatrix.cpp  HashSparseMatrix.h  color_volume.cpp  cyclical_buffer.cpp  internal.h  kinfu.cpp  marching_cubes.cpp  raycaster.cpp  raycaster_large_scale.cpp  screenshot_manager.cpp  standalone_marching_cubes.cpp  tsdf_volume.cpp  world_model.cpp
gpu/kinfu_large_scale/src/Eigen/src/Cholesky/: LDLT.h  LLT.h  LLT_MKL.h
gpu/kinfu_large_scale/src/Eigen/src/CholmodSupport/: CholmodSupport.h
gpu/kinfu_large_scale/src/Eigen/src/Core/: Array.h  ArrayBase.h  ArrayWrapper.h  Assign.h  Assign_MKL.h  BandMatrix.h  Block.h  BooleanRedux.h  CommaInitializer.h  CwiseBinaryOp.h  CwiseNullaryOp.h  CwiseUnaryOp.h  CwiseUnaryView.h  DenseBase.h  DenseCoeffsBase.h  DenseStorage.h  Diagonal.h  DiagonalMatrix.h  DiagonalProduct.h  Dot.h  EigenBase.h  Flagged.h  ForceAlignedAccess.h  Functors.h  Fuzzy.h  GeneralProduct.h  GenericPacketMath.h  GlobalFunctions.h  IO.h  Map.h  MapBase.h  MathFunctions.h  Matrix.h  MatrixBase.h  NestByValue.h  NoAlias.h  NumTraits.h  PermutationMatrix.h  PlainObjectBase.h  Product.h  (+19 more)
gpu/kinfu_large_scale/src/Eigen/src/Eigen2Support/: Block.h  Cwise.h  CwiseOperators.h  LU.h  Lazy.h  LeastSquares.h  MathFunctions.h  Memory.h  Meta.h  Minor.h  QR.h  SVD.h  TriangularSolver.h  VectorBlock.h
gpu/kinfu_large_scale/src/Eigen/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur.h  ComplexSchur_MKL.h  EigenSolver.h  GeneralizedSelfAdjointEigenSolver.h  HessenbergDecomposition.h  MatrixBaseEigenvalues.h  RealSchur.h  RealSchur_MKL.h  SelfAdjointEigenSolver.h  SelfAdjointEigenSolver_MKL.h  Tridiagonalization.h
gpu/kinfu_large_scale/src/Eigen/src/Geometry/: AlignedBox.h  AngleAxis.h  EulerAngles.h  Homogeneous.h  Hyperplane.h  OrthoMethods.h  ParametrizedLine.h  Quaternion.h  Rotation2D.h  RotationBase.h  Scaling.h  Transform.h  Translation.h  Umeyama.h
gpu/kinfu_large_scale/src/Eigen/src/Householder/: BlockHouseholder.h  Householder.h  HouseholderSequence.h
gpu/kinfu_large_scale/src/Eigen/src/IterativeLinearSolvers/: BasicPreconditioners.h  BiCGSTAB.h  ConjugateGradient.h  IncompleteLUT.h  IterativeSolverBase.h
gpu/kinfu_large_scale/src/Eigen/src/Jacobi/: Jacobi.h
gpu/kinfu_large_scale/src/Eigen/src/LU/: Determinant.h  FullPivLU.h  Inverse.h  PartialPivLU.h  PartialPivLU_MKL.h
gpu/kinfu_large_scale/src/Eigen/src/OrderingMethods/: Amd.h
gpu/kinfu_large_scale/src/Eigen/src/PaStiXSupport/: PaStiXSupport.h
gpu/kinfu_large_scale/src/Eigen/src/PardisoSupport/: PardisoSupport.h
gpu/kinfu_large_scale/src/Eigen/src/QR/: ColPivHouseholderQR.h  ColPivHouseholderQR_MKL.h  FullPivHouseholderQR.h  HouseholderQR.h  HouseholderQR_MKL.h
gpu/kinfu_large_scale/src/Eigen/src/SVD/: JacobiSVD.h  JacobiSVD_MKL.h  UpperBidiagonalization.h
gpu/kinfu_large_scale/src/Eigen/src/misc/: Image.h  (+4 more)
gpu/kinfu_large_scale/src/SuiteSparse/Include/: SuiteSparse_config.h  cholmod.h  cholmod_blas.h  cholmod_check.h  cholmod_cholesky.h  cholmod_complexity.h  cholmod_config.h  cholmod_core.h  cholmod_internal.h  cholmod_io64.h  cholmod_matrixops.h  cholmod_modify.h  cholmod_partition.h  cholmod_supernodal.h  cholmod_template.h
gpu/kinfu_large_scale/src/SuiteSparse/Lib/: AMD.lib
gpu/kinfu_large_scale/src/cuda/: bilateral_pyrdown.cu  colors.cu  coresp.cu  device.hpp  estimate_combined.cu  estimate_combined_slac.cu  extract.cu  image_generator.cu  maps.cu  marching_cubes.cu  normals_eigen.cu  pointer_shift.cu  push.cu  ray_caster.cu  tsdf_volume.cu  utils.hpp
gpu/kinfu_large_scale/src/unsupported/doc/: Doxyfile.in
gpu/kinfu_large_scale/src/unsupported/test/: BVH.cpp  CMakeLists.txt  FFTW.cpp  NonLinearOptimization.cpp  NumericalDiff.cpp  alignedvector3.cpp  autodiff.cpp  forward_adolc.cpp  gmres.cpp  kronecker_product.cpp  matrix_exponential.cpp  matrix_function.cpp  matrix_square_root.cpp  mpreal_support.cpp  openglsupport.cpp  polynomialsolver.cpp  polynomialutils.cpp  sparse_extra.cpp  splines.cpp
gpu/kinfu_large_scale/tools/: CMakeLists.txt  capture.cpp  color_handler.h  evaluation.cpp  evaluation.h  kinfuLS_app.cpp  kinfu_app_sim.cpp  openni_capture.h  process_kinfu_large_scale_output.cpp  record_tsdfvolume.cpp  standalone_texture_mapping.cpp  tsdf_volume.h  tsdf_volume.hpp
(+2354 files in other folders)
